@@ -26,6 +26,7 @@ Version 1.4.21 - SVN
   - Fixed issues caused by use of PostgreSQL keyword "user" in SquirrelMail's
     default preferences database schema (#2943483).
   - Fixed attachment filename decoding problems (#2994865).
+  - Now default search criteria to the TO header when searching the sent folder.
 
 Version 1.4.20 - 06 Mar 2010
 ---------------------------
